--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -15,7 +15,7 @@
 }
 
 .logo {
-    background-image: url("../img/mmtrLogo.png");
+    background-image: url("../../assets/img/mmtrLogo.png");
     width: 251px;
     height: 30px;
     background-repeat: no-repeat;
