--- a/src/components/GameScreen/gameScreen.module.css
+++ b/src/components/GameScreen/gameScreen.module.css
@@ -23,6 +23,47 @@
     color: #15191D;
 }
 
+.resultOfAttack {
+    margin-top: 50px;
+}
+
+.xssAttack {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    padding: 1rem;
+    width: 600px;
+    height: 200px;
+    background: #d7dde0;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.attackActions {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.btnAttack {
+    padding: 7px 15px;
+    background: #FFFFFF;
+    border: 1px solid #DD2629;
+    box-sizing: border-box;
+    border-radius: 4px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    cursor: pointer;
+}
+
 .body {
     margin-top: 50px;
     font-family: Roboto, sans-serif;
